# robot_mindset_setup_assistant

./: .dev-setup.yml  .gitlab-ci.yml  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  package.xml
.dev-setup/: .dev-setup.computed.yml  install.sh  requirements.txt  setup_git_credentials.sh  unshallow-repos.py
.dev-setup/docker/: Dockerfile.base  Dockerfile.ci  Dockerfile.devcontainer  Dockerfile.run  build-image.sh  entrypoint.sh  get-image.sh  pull-image.sh  push-image.sh  run.sh  setup.bash
.devcontainer/: devcontainer.json  postCreateCommand.sh
resource/: robot_mindset_setup_assistant
robot_mindset_setup_assistant/: main.py  sparks.yaml
robot_mindset_setup_assistant/example/: .robot_mindeset_setup_assistant.ros.humble.package.cpp.yaml  .robot_mindeset_setup_assistant.ros.humble.package.python.yaml  .robot_mindeset_setup_assistant.ros.humble.project.yaml  .robot_mindeset_setup_assistant.ros.noetic.package.cpp.yaml  .robot_mindeset_setup_assistant.ros.noetic.package.python.yaml  .robot_mindeset_setup_assistant.ros.noetic.project.cpp.yaml  .robot_mindeset_setup_assistant.ros.noetic.yaml
robot_mindset_setup_assistant/resource/: robot_mindset_setup_assistant
robot_mindset_setup_assistant/setup_assistant/: .robot_mindeset_setup_assistant.yaml  apply_dev_setup.py  create_pkg.py  create_pkg.ros.noetic.py  create_pkg_ros_humble.py  dev_setup.py  doxygen_awesome.py  load_config.py  package_versioning.py
robot_mindset_setup_assistant/setup_assistant/components/: __init__.py  level0.py  level1.py
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/: CMakeLists.txt  package.xml
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/example/instance_config/{{args.package.name}}/: config.yaml
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/example/launch/: link_serve.launch.py.j2  main.launch.py.j2  single_serve.launch.py.j2
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/example/urdf/: example.xacro.j2
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/launch/: node.launch.py.j2
robot_mindset_setup_assistant/setup_assistant/template/ros_humble/package/cpp/{{args.package.name}}/{{args.package.name}}/src/: servo_keyboard_input.cpp
robot_mindset_setup_assistant/setup_assistant/template/ros_noetic/: CMakeList.txt.j2  package.xml.j2
robot_mindset_setup_assistant/setup_assistant/templates/: __init__.py  custom_sections.py  filters.py  paths.py  rendering.py
robot_mindset_setup_assistant/template/debian/{{args.package.name | to_snake_case}}/: package.xml.j2
robot_mindset_setup_assistant/template/debian/{{args.package.name}}/: package.xml.j2
(+232 files in other folders)
